lab1/Test/L1-A-6-66.output
Error Type B at Line 1
Error Type B at Line 2
Error Type B at Line 4
Error Type B at Line 11
Error Type A at Line 27
Error Type B at Line 27
Error Type A at Line 30
Error Type B at Line 30
