lab1/Test/L1-A-6-66.cmm
sTHqx1vKgB47 ( ) {
  int wd [ 1463215642 ] , N2xrQx6 [ 452969581 ] 927051880 
    ] [ 827179520 ] = k ;
  int j_cSxAJgaI [ ] = diUXOI5bl , U ;
  ! - ! VA7wZCLIA3W / - Ax5d4nG0 < Z ( csF683YLqcUuTzGrW8vo 
    ) . vzEfDrZJGQnUIB [ mB3NzplfR ] [ Yfp3Pq1oYpkX ] 
    * qj4U / QiKbaLHx6bIr3QE8ayI * blMxH / ykphu3KTga 
    / b4bGxvH / toVjjwPR7 / smRDBm + kubZc - SoqIavnWdU7MIILo4Rd 
    - mf_LqD0fwTzl1 - BdVXgSYVHmKZN + vu0jH + EglqmOq 
    + aspmZ0cZCd7bR1B1rD - aCeNNwRrGgFbPq + kLWN_TQVpJO0aMbiMN 
    + ieQk + + YxiIfr7d6G43OEam == ( R01RQP ) . gfFXaUjz8QL18iKhLScC 
    . _iFi7380Hea59_X / Drc6pzBrH / h23OgmB5130 + L7LgB1hQawFbkXOZx__ 
    + l && - fFC / X_dYsNRNm * UMxRi7OFqb / npL4HDL5wKwaB941hW 
    / aaj1WihJL7zv + BaBQ1Q + cbqYD21UCxK10cs2 == jD8 
    != keRicueX0 <= jYqU7JbrbsbCMerMI0A <= UX <= xoT <= 
    Ef_aDJY6 < AkvuuDr < QFfpRLQyEqY0qS >= UduAR < OK5semj 
    >= bMAza && ! VewjhwBl * Gr2 / ndcugmaJynSGBHdZQFFG 
    / TJylCS2YxBaclOIK + PUOIzJA64e_dmREon > Hv5wTy >= 
    ZKvR3lh2DcJQ6d < Y1alB2 <= jn4HeGhOFly < oVamIzRtM2GHc5AZv0D9 
    == yz4ZCBORFGT5803ON == JzGXpo >= Se2eDEi7QZVxDl == 
    _OxA90UDT8mbPd && 1061587970 * lyDwF2oUsT1JonJb_yO 
    <= w == i1NrjKMq != wTUlZOjA4qCFirGw <= G2ZNt8xh9AD 
    <= boVRg48OsjcN3_do || OkV_c ( s ) * r3ksKAkzwX_Bx 
    == CmpswQAz2vIH < rokpM6kbQSq418NDgM != kifn == sSVMk9SWjfz 
    == tW7CWI > wrgNkyOCgfJ7X0gCu ;
}
'int MtduTCh0TslSF6 [ 730224354 ] [ ] , lCB_krmvanYEL0qdrnUF 

;
$float 